# UrOwn-RAG-ChatBot

./: .gitignore  README.md  app.py  config.py  ingest.py  main.py  pyproject.toml
docs/chroma/67be6c81-2045-44ad-976c-5eb8367c9e11/: index_metadata.pickle
