[project]
name = "rag-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.4",
    "pandas>=3.0.3",
    "pypdf>=6.13.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
    "torch>=2.12.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.27.0",
]
